// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputIconContainer Snapshots grow 1`] = `
.emotion-0 {
  display: block;
  position: relative;
}

<div
  className="emotion-0 emotion-1"
/>
`;

exports[`InputIconContainer Snapshots renders as expected 1`] = `
.emotion-0 {
  display: inline-block;
  position: relative;
}

<div
  className="emotion-0 emotion-1"
/>
`;
